Resolved issue with table reloading middleware call when collapsing or expanding

--- a/src/app/pages/sharing/components/shares-dashboard/shares-dashboard.component.scss
+++ b/src/app/pages/sharing/components/shares-dashboard/shares-dashboard.component.scss
@@ -79,13 +79,11 @@
 .two-table-container .first {
   grid-area: first;
   margin: 5px 0;
-  margin-right: 5px;
 }
 
 .two-table-container .second {
   grid-area: second;
   margin: 5px 0;
-  margin-left: 5px;
 }
 
 .two-table-container .third {
@@ -114,19 +112,16 @@
 .three-table-container .first {
   grid-area: first;
   margin: 5px 0;
-  margin-right: 5px;
 }
 
 .three-table-container .second {
   grid-area: second;
   margin: 5px 0;
-  margin-left: 5px;
 }
 
 .three-table-container .third {
   grid-area: third;
   margin: 5px 0;
-  margin-right: 5px;
 }
 
 .three-table-container .fourth {
@@ -146,25 +141,21 @@
 .four-table-container .first {
   grid-area: first;
   margin: 5px 0;
-  margin-right: 5px;
 }
 
 .four-table-container .second {
   grid-area: second;
   margin: 5px 0;
-  margin-left: 5px;
 }
 
 .four-table-container .third {
   grid-area: third;
   margin: 5px 0;
-  margin-right: 5px;
 }
 
 .four-table-container .fourth {
   grid-area: fourth;
   margin: 5px 0;
-  margin-left: 5px;
 }
 
 .entity-empty-div {
